2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/BuildTool.cs: Use the default configuration if
	none is specified. Fixes bug #449441 - 'mdtool -f:<sln_file>' fails
	to compile applications.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/WorkspaceItem.cs: Properly set the default file
	name when setting the name.

	* MonoDevelop.Projects/ProjectService.cs: Fix invalid check.

	* MonoDevelop.Projects.Formats.MSBuild/SlnData.cs:
	* MonoDevelop.Projects.Formats.MSBuild/SlnFileFormat.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildHandler.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProject.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildFileFormat.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Added
	more information about Visual Studio versions. There are several
	version numbers: product version (VS release), tools version (msbuild
	tools version), and sln version. Now versions are properly saved
	according to the file format. Fixes bug #431726.

	* MonoDevelop.Projects.addin.xml: Registered VS 2010 format.

2008-12-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectService.cs: Don't
	try to resolve paths beyond the root directory. E.g.
	/aa/bb/../../../..

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/CustomCommandExtension.cs: Don't run the
	after-build custom command if the build failed. Fixes bug #456239 -
	After Build Custom Command firing when build fails.

	* MonoDevelop.Projects/DotNetProject.cs: Fix null ref.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs: Moved BeforeCompilationAction
	enum to MD.Ide.

2008-12-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/SimpleCodeCompletionDatabase.cs:
	fixed 'Bug 455892 - Crash when closing tabs'.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: