@@ -132,7 +132,7 @@ namespace MonoDevelop.Projects.Formats.MD1
 						monitor.ReportWarning (msg);
 						refres.AddWarning (msg);
 					}
-				} else if (pr.StoredReference != pr.Reference && !pr.Reference.StartsWith (pr.StoredReference + ",")) {
+				} else if (pr.StoredReference != pr.Reference && !pr.Reference.StartsWith (pr.StoredReference + ",") && pr.SpecificVersion) {
 					if (refres == null)
 						refres = new BuildResult ();
 					string msg = GettextCatalog.GetString ("Reference '{0}' not found on system. Using '{1} instead.", pr.StoredReference, pr.Reference);
